// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoveCurrentConfigurationButton It renders properly when disabled 1`] = `
<body>
  <div>
    <button
      aria-disabled="false"
      class="css-mgdi0l-button"
      disabled=""
      type="button"
    >
      <span
        class="css-1riaxdn"
      >
        Remove current configuration
      </span>
    </button>
  </div>
</body>
`;

exports[`RemoveCurrentConfigurationButton It renders properly when enabled 1`] = `
<body>
  <div>
    <button
      aria-disabled="false"
      class="css-ttl745-button"
      type="button"
    >
      <span
        class="css-1riaxdn"
      >
        Remove current configuration
      </span>
    </button>
  </div>
</body>
`;
